bash使うようにした

--- a/src/neovim/devcontainer-feature.json
+++ b/src/neovim/devcontainer-feature.json
@@ -17,6 +17,6 @@
     }
   },
   "installsAfter": [
-    "ghcr.io/vilion/devcontainer-features/neovim-essentials:0.1.2"
+    "ghcr.io/vilion/devcontainer-features/neovim-essentials:latest"
   ]
 }
