--- a/src/astronvim/devcontainer-feature.json
+++ b/src/astronvim/devcontainer-feature.json
@@ -1,21 +1,21 @@
 {
   "name": "AstroNvim",
   "id": "astronvim",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Provides astronvim features for devcontainers",
   "options": {
     "version": {
       "type": "string",
       "proposals": [
-        "v3.37.2",
-        "v3.37.1"
+        "v3.43.4",
+        "v3.43.3"
       ],
-      "default": "v3.37.2",
+      "default": "v3.43.4",
       "description": "Select the astronvim version you want to install as present in GitHub Releases"
     }
   },
   "installsAfter": [
-    "ghcr.io/vilion/devcontainer-features/neovim-essentials:0.1.2",
-    "ghcr.io/vilion/devcontainer-features/neovim:0.1.1"
+    "ghcr.io/vilion/devcontainer-features/neovim-essentials:latest",
+    "ghcr.io/vilion/devcontainer-features/neovim:latest"
   ]
 }
