--- a/src/neovim/devcontainer-feature.json
+++ b/src/neovim/devcontainer-feature.json
@@ -1,13 +1,16 @@
 {
   "name": "Neovim",
   "id": "neovim",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Provide neovim features for devcontainers",
   "options": {
     "version": {
       "type": "string",
       "proposals": [
-        "v0.9.5"
+        "v0.9.4",
+        "v0.9.5",
+        "stable",
+        "nightly"
       ],
       "default": "stable",
       "description": "Select the neovim version you want to install as present in GitHub Releases"
